--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .accordion {
-  width: 500px;
+  width: 400px;
   border: 1px solid #ccc;
   border-bottom: none;
   font-family: Arial, Helvetica, sans-serif;
@@ -10,4 +10,16 @@
 .accordion dd {
   border-bottom: 1px solid #ccc;
   margin: 0px;
+}
+
+.accordion dt {
+    cursor:pointer;
+    background:#eaeaea;
+    padding: 8px 4px;
+    font-size:13px;
+    font-weight: bold;
+}
+
+.accordion dd {
+    padding:12px 8px;
 }
